; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/mv/extr_gpio.c_mv_gpio_debounce_setup.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/mv/extr_gpio.c_mv_gpio_debounce_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.callout = type { i32 }
%struct.mv_gpio_softc = type { %struct.callout** }

@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @mv_gpio_debounce_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mv_gpio_debounce_setup(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.callout*, align 8
  %7 = alloca %struct.mv_gpio_softc*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @device_get_softc(i32 %8)
  %10 = inttoptr i64 %9 to %struct.mv_gpio_softc*
  store %struct.mv_gpio_softc* %10, %struct.mv_gpio_softc** %7, align 8
  %11 = call i32 (...) @MV_GPIO_ASSERT_LOCKED()
  %12 = load %struct.mv_gpio_softc*, %struct.mv_gpio_softc** %7, align 8
  %13 = getelementptr inbounds %struct.mv_gpio_softc, %struct.mv_gpio_softc* %12, i32 0, i32 0
  %14 = load %struct.callout**, %struct.callout*** %13, align 8
  %15 = load i32, i32* %5, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds %struct.callout*, %struct.callout** %14, i64 %16
  %18 = load %struct.callout*, %struct.callout** %17, align 8
  store %struct.callout* %18, %struct.callout** %6, align 8
  %19 = load %struct.callout*, %struct.callout** %6, align 8
  %20 = icmp eq %struct.callout* %19, null
  br i1 %20, label %21, label %23

21:                                               ; preds = %2
  %22 = load i32, i32* @ENXIO, align 4
  store i32 %22, i32* %3, align 4
  br label %33

23:                                               ; preds = %2
  %24 = load %struct.callout*, %struct.callout** %6, align 8
  %25 = call i64 @callout_active(%struct.callout* %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %30

27:                                               ; preds = %23
  %28 = load %struct.callout*, %struct.callout** %6, align 8
  %29 = call i32 @callout_deactivate(%struct.callout* %28)
  br label %30

30:                                               ; preds = %27, %23
  %31 = load %struct.callout*, %struct.callout** %6, align 8
  %32 = call i32 @callout_stop(%struct.callout* %31)
  store i32 0, i32* %3, align 4
  br label %33

33:                                               ; preds = %30, %21
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i64 @device_get_softc(i32) #1

declare dso_local i32 @MV_GPIO_ASSERT_LOCKED(...) #1

declare dso_local i64 @callout_active(%struct.callout*) #1

declare dso_local i32 @callout_deactivate(%struct.callout*) #1

declare dso_local i32 @callout_stop(%struct.callout*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
